--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Russell Currey <ruscur@russell.cc>"]
 
 [dependencies]
 iron = "0.5"
+router = "0.5"
 rustc-serialize = "0.3"
 redis = "0.5"
