Add basic templating for the main page
Signed-off-by: Russell Currey <ruscur@russell.cc>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ iron = "0.5"
 router = "0.5"
 rustc-serialize = "0.3"
 redis = "0.5"
+handlebars = "0.24"
+handlebars-iron = "0.22"
+env_logger = "0.4"
