--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ r2d2 = "0.7"
 r2d2_redis = "0.5"
 persistent = "0.3"
 # todo - use persistent to share redis connection pool between handlers
+hyper-native-tls = "0.2"
